--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "@jensk/rollup-plugin-package-process",
   "description": "A barebones package.json copier and processor",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "private": false,
   "scripts": {
-    "build": "tsc",
+    "build": "rollup -c rollup.config.js",
     "release": "pnpm build && pnpm publish --access=public"
   },
-  "main": "dist/index.js",
-  "type": "module",
-  "module": "dist/index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "keywords": [
     "rollup-plugin",
@@ -17,7 +16,7 @@
     "package.json"
   ],
   "files": [
-    "dist/*",
+    "dist",
     "README.md",
     "LICENCE"
   ],
@@ -31,8 +30,15 @@
     "Jens Kresse <contact@jensk.dev>"
   ],
   "devDependencies": {
+    "@rollup/plugin-typescript": "^8.3.3",
     "@types/node": "^18.0.0",
     "rollup": "^2.75.7",
+    "rollup-plugin-dts": "^4.2.2",
+    "rollup-plugin-typescript2": "^0.32.1",
+    "tslib": "^2.4.0",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "remove": "^0.1.5"
   }
 }
